--- a/src/style.less
+++ b/src/style.less
@@ -16,7 +16,7 @@
     padding: 0 20px;
 
     font-size: 1.2em;
-    -webkit-mask-box-image: linear-gradient(to top, transparent, transparent 5%, white 20%, white 80%, transparent 95%, transparent);
+    -webkit-box-image: linear-gradient(to top, transparent, transparent 5%, white 20%, white 80%, transparent 95%, transparent);
   }
 
   .picker-column {
